feat: add reversible player merges
